--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             "Digital Transformation", "Data Analysis", "Team Leadership",  "Technik-Enthusiast",
             "IT Infrastructure", "Strategic Planning", "B2B Relations", "Innovation", "RAG Tools", "Familienvater",
             "KI-Integration", "Verlagsmanagement", "Anzeigenleitung", "PR & Marketing","Office 365",
-            "Prozess-Wikis", "Kanban-Projektmanagement", "Datev-Export", "Excel-Profi", "Video & Bildbearbeitung", "Prozessoptimierung",
+            "Prozess-Wikis", "Kanban-Projektmanagement", "Custom GPTs", "Excel-Profi", "Video & Bildbearbeitung", "Prozessoptimierung",
             "Künstliche Intelligenz", "Python Grundkenntnisse", "API-Einbindungen", "Verlagsmanager"
         ];
         let revealedSkills = [];
@@ -349,7 +349,7 @@
         }
 
         function increaseSpeed() {
-            const speedIncrease = 1.15;
+            const speedIncrease = 1.5;
             ballSpeedX *= speedIncrease;
             ballSpeedY *= speedIncrease;
         }
