--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             "IT Infrastructure", "Strategic Planning", "B2B Relations", "Innovation", "RAG Tools", "Familienvater",
             "KI-Integration", "Verlagsmanagement", "Anzeigenleitung", "PR & Marketing","Office 365",
             "Prozess-Wikis", "Kanban-Projektmanagement", "Custom GPTs", "Excel-Profi", "Video & Bildbearbeitung", "Prozessoptimierung",
-            "Künstliche Intelligenz", "Python Grundkenntnisse", "API-Einbindungen", "Verlagsmanager"
+            "Künstliche Intelligenz", "Python Grundkenntnisse", "API-Einbindungen", "Prokurist", "Verlagsmanager"
         ];
         let revealedSkills = [];
 
